// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Blog/> Snapshot renders without crashing using mount 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: .75rem 1.25rem;
  cursor: pointer;
}

.c1 > *:not(:last-child) {
  padding-right: 0.25em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
}

.c0 > :last-child {
  margin-top: 1.5em;
  height: 200px;
  width: 200px;
}

<Blog>
  <styled.div>
    <div
      className="c0"
    >
      <h1>
        COMING SOON...
      </h1>
      <UIButton
        label="Go Back"
        onClick={[Function]}
      >
        <styled.button
          onClick={[Function]}
          secondary={false}
        >
          <button
            className="c1"
            onClick={[Function]}
          >
            <span>
              Go Back
            </span>
          </button>
        </styled.button>
      </UIButton>
      <Te>
        <h1
          id="hello-world"
          key="0"
        >
          Hello world!
        </h1>
      </Te>
    </div>
  </styled.div>
</Blog>
`;

exports[`<Blog/> Snapshot renders without crashing using render 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: .75rem 1.25rem;
  cursor: pointer;
}

.c1 > *:not(:last-child) {
  padding-right: 0.25em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
}

.c0 > :last-child {
  margin-top: 1.5em;
  height: 200px;
  width: 200px;
}

<div
  class="c0"
>
  <h1>
    COMING SOON...
  </h1>
  <button
    class="c1"
  >
    <span>
      Go Back
    </span>
  </button>
  <h1
    id="hello-world"
  >
    Hello world!
  </h1>
</div>
`;

exports[`<Blog/> Snapshot renders without crashing using shallow 1`] = `
<styled.div>
  <h1>
    COMING SOON...
  </h1>
  <UIButton
    label="Go Back"
    onClick={[Function]}
  />
  <Te>
    # Hello world!
  </Te>
</styled.div>
`;
